Create 4 examples to illustrate

--- a/cubemap-compressed/index.html
+++ b/cubemap-compressed/index.html
@@ -39,8 +39,8 @@
 
   </script>
   <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
-  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <script src="BasisTextureLoader.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.js"></script>
+  <script src="../js/BasisTextureLoader.js"></script>
   <script src="main.js"></script>
   </body>
 </html>
