--- a/cubemap-layer/index.html
+++ b/cubemap-layer/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Multilayer Cubemap</title>
+    <base href="./">
+    <link rel="icon" href="data:;base64,=">
   </head>
   <body>
     <header>
