--- a/cubemap/index.html
+++ b/cubemap/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="data:;base64,=">
   </head>
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
