Fix script path

--- a/cubemap-layer/index.html
+++ b/cubemap-layer/index.html
@@ -14,7 +14,7 @@
       </details>
     </header>
     <script type="module">
-      import {WebXRButton} from './js/webxr-button.js';
+      import {WebXRButton} from '../js/webxr-button.js';
 
       // XR globals.
       let xrButton = null;
