--- a/cubemap-layer/index.html
+++ b/cubemap-layer/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Multilayer Cubemap</title>
     <base href="./">
-    <link rel="icon" href="data:;base64,=">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
   <body>
     <header>
